<resources>
    <string name="app_name">Livraison</string>
    <string name="titlePendingDeliveries">Livraisons en cours : </string>
    <string name="titleFinishedDeliveries">Livraisons terminées : </string>
    <string name="delivery_issue">Problème avec la livraison</string>
    <string name="delivery_done">Livraison effectuée</string>
    <string name="welcome_message">Bienvenue sur</string>
    <string name="client_text">Client</string>
    <string name="livreur_text">Livreur</string>
    <string name="service_client_text">Service client</string>
    <string name="profile_selection">Séléctionnez un profil</string>
    <string name="client_icon_description">Icone du Client</string>
    <string name="livreur_icon_description">Icone du Livreur</string>
    <string name="service_client_icon_description">Icone du service client</string>
    <string name="deliveries_map">Livraisons en cours</string>
    <string name="next_delivery">Prochaines Livraisons</string>
    <string name="next_delivery_distance">%.2f km</string>
    <string name="picture">Photo</string>
    <string name="ajouter_une_photo">Ajouter une photo</string>
    <string name="retake_picture">Changer de photo</string>
    <string name="remove_picture">Supprimer la photo</string>
    <string name="sac_dos_dora_adulte">Sac à dos Dora adulte</string>
    <string name="envoyer">Envoyer</string>
    <string name="signalement">Signalement</string>
    <string name="PendingReports">Signalements à traiter :</string>
    <string name="TreatedReports">Signalements traités :</string>
    <string name="me_localiser">Me localiser</string>
    <string name="image_de_l_article">Image de l\'article</string>
    <string name="logo_de_l_app">logo de l\'app</string>
    <string name="add_to_calendar">Ajouter un évènement au Calendrier</string>
    <string name="report_problem">Signaler un problème</string>
    <string name="logout">Se déconnecter</string>
</resources>